# qt-notes

./: .gitignore  CMakeLists.txt  README.en.md  README.md
.github/workflows/: aur-publish.yml  build.yml
packaging/aur/: PKGBUILD
src/: main.cpp
src/app/: applicationcontroller.cpp  applicationcontroller.h
src/common/: storagepaths.h
src/data/: notedata.h  notesrepository.cpp  notesrepository.h
src/model/: notelistmodel.cpp  notelistmodel.h
src/security/: notecrypto.cpp  notecrypto.h  unlockstatestore.cpp  unlockstatestore.h
src/theme/: themecatalog.cpp  themecatalog.h
src/ui/: iconfactory.cpp  iconfactory.h  noteeditor.cpp  noteeditor.h  noteencryptiondialog.cpp  noteencryptiondialog.h  notelistpopup.cpp  notelistpopup.h  notewindow.cpp  notewindow.h  settingsdialog.cpp  settingsdialog.h  titlebar.cpp  titlebar.h
translations/: qt-notes_en.qm  qt-notes_en.ts  qt-notes_zh_CN.qm  qt-notes_zh_CN.ts
